[package]
name = "minesweeper-wgpu"
version = "0.1.0"
authors = ["Tiago Nascimento <tiago@theosirian.com>"]
edition = "2018"

[dependencies]
winit = "0.22.1"
wgpu = "0.5.0"
image = "0.23.4"
assets_manager = "0.2.2"
rodio = "0.11.0"
gilrs = "0.7.4"
dyon = "0.44.0"
futures = "0.3.4"
palette = "0.5.0"
glsl-to-spirv = "0.1"
bytemuck = "1.2.0"